Make multisampling more robust in QOpenGLFramebufferObject

Some drivers are reported to get confused when passing different
sample counts (requested vs. actual) to the color and depth/stencil
attachments. To overcome this, pass the requested sample count to all
the attachments.

Task-number: QTBUG-33406
Change-Id: I17b0e3dbbd78de2ab0f45e95164b4f326d47aeff
Reviewed-by: Paul Olav Tvete <paul.tvete@digia.com>
Reviewed-by: Kimmo Leppälä <kimmo.leppala@digia.com>

cregit: d1c00155464fe9a8ce08216141ca978fe6415dcc https://github.com/qt/qtbase/commit/d1c00155464fe9a8ce08216141ca978fe6415dcc