src/gui/opengl/qopenglframebufferobject.cpp
@@ -999,6 +999,10 @@ argument_list|)
 expr_stmt|;
 endif|#
 directive|endif
+name|requestedSamples
+operator|=
+name|samples
+expr_stmt|;
 name|size
 operator|=
 name|sz
@@ -1007,7 +1011,6 @@ name|target
 operator|=
 name|texture_target
 expr_stmt|;
-comment|// texture dimensions
 name|QT_RESET_GLERROR
 argument_list|()
 expr_stmt|;
@@ -1189,6 +1192,9 @@ condition|(
 name|valid
 condition|)
 block|{
+comment|// Query the actual number of samples. This can be greater than the requested
+comment|// value since the typically supported values are 0, 4, 8, ..., and the
+comment|// requests are mapped to the next supported value.
 name|funcs
 operator|.
 name|glGetRenderbufferParameteriv
@@ -1629,13 +1635,14 @@ name|Attachment
 name|attachment
 parameter_list|)
 block|{
+comment|// Use the same sample count for all attachments. format.samples() already contains
+comment|// the actual number of samples for the color attachment and is not suitable. Use
+comment|// requestedSamples instead.
+specifier|const
 name|int
 name|samples
 init|=
-name|format
-operator|.
-name|samples
-argument_list|()
+name|requestedSamples
 decl_stmt|;
 comment|// free existing attachments
 if|if
